--- a/hushtags-web/static/portal/main.css
+++ b/hushtags-web/static/portal/main.css
@@ -17,6 +17,8 @@ body {
 	bottom: 0px;
 	right: 0px;
 	margin: auto;
+	width: 100%;
+	max-width: 900px;
 }
 
 header {
@@ -42,12 +44,17 @@ header .seperator:after {
 	content: "·";
 }
 
+header .links {
+	display: inline;
+	position: relative;
+}
+
 header a {
 	font-family: Arial;
 	font-size: large;
 	color: white;
 	text-decoration: none;
-	margin: 0px 10px;
+	white-space: nowrap;
 }
 
 header a:hover {
@@ -65,4 +72,35 @@ footer {
 	background: #000;
 	width: 100%;
 	padding: 10px;
+}
+
+footer a {
+	font-family: Arial;
+	font-size: small;
+	color: white;
+	text-decoration: none;
+	white-space: nowrap;
+}
+
+footer a:hover {
+	text-decoration: underline;
+}
+
+@media only screen and (max-width: 690px) {
+  header .seperator {
+    display: none;
+  }
+ 
+  header .links {
+  	display: block;
+  	margin-top: 6px;
+  }
+  
+  header .links .seperator {
+    display: inline-block;
+  }
+  
+  header .links a {
+  	font-size: medium;
+  }
 }
